--- a/allora-node/Dockerfile_updater
+++ b/allora-node/Dockerfile_updater
@@ -1,17 +1,15 @@
-# Use an official Python runtime as the base image
-FROM amd64/python:3.9-buster as project_env
+# Sử dụng Docker image TensorFlow GPU
+FROM tensorflow/tensorflow:latest-gpu
 
-# Set the working directory in the container
+# Thiết lập thư mục làm việc bên trong container
 WORKDIR /app
 
-# Install dependencies
-COPY updater-requirements.txt updater-requirements.txt
+# Sao chép requirements cho updater và cài đặt phụ thuộc
+COPY updater-requirements.txt .
 RUN pip install --upgrade pip setuptools \
     && pip install --timeout=360 --no-cache-dir -r updater-requirements.txt
 
-FROM project_env
-
+# Sao chép mã nguồn ứng dụng
 COPY update_app.py app_config.py app_utils.py /app/
 
-# Set the entrypoint command
-ENTRYPOINT ["sh", "-c", "while true; sleep 60; do python -u /app/update_app.py; done"]
+# Đảm bảo TensorFlow có thể sử dụng GPU (nếu cần
