--- a/allora-node/Dockerfile
+++ b/allora-node/Dockerfile
@@ -1,20 +1,29 @@
-# Sử dụng Docker image TensorFlow GPU với CUDA và cuDNN tích hợp sẵn
+# Sử dụng TensorFlow GPU với phiên bản CUDA và cuDNN đã tích hợp
 FROM tensorflow/tensorflow:latest-gpu
 
 # Thiết lập thư mục làm việc bên trong container
 WORKDIR /app
 
-# Cài đặt các thư viện Python bổ sung từ requirements.txt
-COPY requirements.txt .
-RUN pip install --upgrade pip setuptools \
-    && pip install --timeout=360 --no-cache-dir --ignore-installed -r updater-requirements.txt
+# Cài đặt các phụ thuộc hệ thống
+RUN apt-get update && apt-get install -y \
+    python3-pip \
+    python3-dev \
+    build-essential \
+    git \
+    wget \
+    && rm -rf /var/lib/apt/lists/*
 
-# Sao chép mã nguồn ứng dụng vào container
-COPY gunicorn_conf.py app.py app_config.py app_utils.py init_data.py /app/
+# Sao chép requirements.txt vào container
+COPY requirements.txt .
+
+# Cài đặt các thư viện Python từ requirements.txt
+RUN pip3 install --no-cache-dir -r requirements.txt
+
+# Sao chép mã nguồn ứng dụng
+COPY train_models.py app_config.py .
 
 # Đảm bảo TensorFlow có thể sử dụng GPU
 ENV TF_FORCE_GPU_ALLOW_GROWTH=true
 
-# Khởi động ứng dụng với Gunicorn
-CMD ["gunicorn", "--conf", "/app/gunicorn_conf.py", "app:app"]
-RUN pip install blinker==1.4
+# Khởi chạy script đào tạo
+CMD ["python3", "train_models.py"]
