--- a/allora-node/Dockerfile
+++ b/allora-node/Dockerfile
@@ -2,7 +2,7 @@ FROM tensorflow/tensorflow:latest-gpu
 
 WORKDIR /app
 
-# Cài đặt các công cụ phát triển cần thiết để biên dịch các thư viện Python, bao gồm cả python3-venv
+# Cài đặt các công cụ phát triển cần thiết để biên dịch các thư viện Python
 RUN apt-get update && apt-get install -y \
     gcc \
     g++ \
@@ -16,14 +16,9 @@ RUN apt-get update && apt-get install -y \
 # Cài đặt pip
 RUN curl -sS https://bootstrap.pypa.io/get-pip.py | python3
 
-# Sao chép file yêu cầu và cài đặt các gói
-COPY requirements.txt updater-requirements.txt /app/
-
-# Cài đặt Flask, Pandas và các gói từ requirements
+# Cài đặt các gói phụ thuộc trực tiếp
 RUN pip install --upgrade pip setuptools \
-    && pip install --timeout=360 --no-cache-dir -r /app/requirements.txt \
-        && pip install numpy==1.24.3 flask[async] gunicorn[gthread] retrying==1.3.3 requests pandas==2.1.3 torch scikit-learn==1.3.0 aiohttp==3.8.1 joblib==1.3.2 \
-    && pip install Flask==2.1.2 pandas
+    && pip install --timeout=360 --no-cache-dir numpy==1.24.3 flask[async] gunicorn[gthread] retrying==1.3.3 requests pandas==2.1.3 torch scikit-learn==1.3.0 aiohttp==3.8.1 joblib==1.3.2
 
 # Sao chép mã nguồn ứng dụng
 COPY . /app
