--- a/allora-node/requirements.txt
+++ b/allora-node/requirements.txt
@@ -1,9 +1,9 @@
-numpy==1.24.3
+numpy>=1.24.3
 flask[async]
 gunicorn[gthread]
 retrying==1.3.3
 requests
-pandas==2.1.3
+pandas>=1.4.0,<3.0.0
 torch
 scikit-learn==1.3.0  # For MinMaxScaler
 aiohttp==3.8.1  # Async HTTP client for making asynchronous requests
